--- a/best-air-fryers/index.html
+++ b/best-air-fryers/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Best Air Fryers (2026) | KitchenGearLab</title>
-  <meta name="description" content="Best air fryers for real kitchens in 2026. A calm, test-driven shortlist with clear trade-offs: capacity, controls, cleanup, and consistency." />
+  <meta name="description" content="Best air fryers for real kitchens in 2026. A calm, test-driven shortlist with clear trade-offs: capacity, workflow, cleanup, and consistency." />
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
   <meta name="referrer" content="strict-origin-when-cross-origin" />
   <meta name="color-scheme" content="light only" />
@@ -27,7 +27,7 @@
   <meta property="og:locale" content="en_US" />
   <meta property="og:url" content="https://kitchengearlab.github.io/best-air-fryers/" />
   <meta property="og:title" content="Best Air Fryers (2026) | KitchenGearLab" />
-  <meta property="og:description" content="A calm, test-driven shortlist with clear trade-offs: capacity, controls, cleanup, and consistency." />
+  <meta property="og:description" content="A calm, test-driven shortlist with clear trade-offs: capacity, workflow, cleanup, and consistency." />
   <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/best-air-fryers-og-1200x630.webp" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -37,15 +37,19 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Best Air Fryers (2026) | KitchenGearLab" />
-  <meta name="twitter:description" content="A calm, test-driven shortlist with clear trade-offs: capacity, controls, cleanup, and consistency." />
+  <meta name="twitter:description" content="A calm, test-driven shortlist with clear trade-offs: capacity, workflow, cleanup, and consistency." />
   <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/best-air-fryers-og-1200x630.webp" />
-  <meta name="twitter:image:alt" content="Premiumutil=" content="Premium editorial kitchen scene featuring multiple air fryers arranged side-by-side in soft daylight." />
+  <meta name="twitter:image:alt" content="Premium editorial kitchen scene featuring multiple air fryers arranged side-by-side in soft daylight." />
 
-  <!-- Performance: hero preload (update filenames if different) -->
+  <!-- Performance: hero preload -->
   <link rel="preload" as="image"
         href="https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-1600x840.webp"
         imagesrcset="https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-2400x1260.webp 2400w"
         imagesizes="(max-width: 900px) 100vw, 40vw" />
+
+  <!-- Brand preload -->
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
 
   <!-- GA4: connection hints -->
   <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
@@ -98,7 +102,7 @@
         "@id": "https://kitchengearlab.github.io/best-air-fryers/#webpage",
         "url": "https://kitchengearlab.github.io/best-air-fryers/",
         "name": "Best Air Fryers (2026)",
-        "description": "Best air fryers for real kitchens in 2026. A calm, test-driven shortlist with clear trade-offs: capacity, controls, cleanup, and consistency.",
+        "description": "Best air fryers for real kitchens in 2026. A calm, test-driven shortlist with clear trade-offs: capacity, workflow, cleanup, and consistency.",
         "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
         "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
         "inLanguage": "en-US",
@@ -111,7 +115,7 @@
         },
         "mainEntityOfPage": "https://kitchengearlab.github.io/best-air-fryers/",
         "datePublished": "2026-02-01",
-        "dateModified": "2026-02-01"
+        "dateModified": "2026-02-02"
       }
     ]
   }
@@ -172,9 +176,15 @@
             <h1 id="hero-title">Best Air Fryers (2026)</h1>
 
             <p class="lead">
-              A calm, test-driven shortlist for real kitchens. We focus on what actually changes your day-to-day:
+              A calm, test-driven shortlist for real kitchens. We focus on what changes day-to-day:
               results consistency, usable capacity, cleanup friction, and controls you won’t hate after week two.
             </p>
+
+            <ul class="checklist">
+              <li><strong>Workflow first:</strong> single basket vs dual-zone changes everything.</li>
+              <li><strong>Usable capacity:</strong> single-layer space matters more than marketing volume.</li>
+              <li><strong>Cleanup reality:</strong> basket design decides long-term satisfaction.</li>
+            </ul>
 
             <div class="hero-actions" role="group" aria-label="Primary actions">
               <a class="btn btn-accent" href="#top-picks">See top picks</a>
@@ -188,7 +198,7 @@
               <a href="/privacy/">Privacy</a>
             </p>
 
-            <p class="small">Last updated: 2026-02-01</p>
+            <p class="small">Last updated: 2026-02-02</p>
           </div>
 
           <div class="hero-media" aria-label="Hero image">
@@ -219,13 +229,13 @@
       <div class="container">
         <div class="section-head">
           <h2 id="picks-title">Top picks</h2>
-          <p class="section-subtitle">Shortlist first. Details second. No hype in the middle.</p>
+          <p class="section-subtitle">Five picks that cover most kitchens, without the “Top 17” nonsense.</p>
         </div>
 
         <div class="note">
           <p class="small" style="margin:0;">
-            These picks are placeholders until you finalize your exact models. The structure is built for SEO and usability.
-            When you’re ready, tell me your 3–6 exact model names and I’ll fill the table + pros/cons precisely.
+            These are practical picks based on workflow buckets (single basket, dual-zone, compact dual).
+            If you’re specifically shopping Ninja, use the <a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a> to understand the lines.
           </p>
         </div>
 
@@ -237,44 +247,73 @@
                 <th>Best for</th>
                 <th class="muted">Why it wins</th>
                 <th class="muted">Trade-offs</th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td class="best">
-                  <span class="badge">Top pick</span><br />
-                  Balanced daily driver
+                  <span class="badge">Best overall</span><br />
+                  Ninja Foodi DualZone Smart XL 10 QT (DZ550)
                 </td>
-                <td>Most kitchens</td>
-                <td class="muted">Stable results, easy workflow, realistic cleanup.</td>
-                <td class="muted">Not the biggest basket; not the cheapest.</td>
+                <td>Families, meal timing</td>
+                <td class="muted">Dual baskets reduce juggling. Strong “protein + side” workflow.</td>
+                <td class="muted">Larger footprint; more parts to clean.</td>
+                <td style="white-space:nowrap;">
+                  <a class="btn btn-accent btn-sm" href="https://www.amazon.ca/Ninja-DZ550-Independent-Thermometer-Dehydrate/dp/B0B15Q3HCQ?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=9cde9721d96fc88ce43d609363fd090e&ref_=as_li_ss_tl" rel="sponsored nofollow noopener" target="_blank">Check price</a>
+                </td>
               </tr>
+
               <tr>
                 <td class="best">
-                  <span class="badge">Budget</span><br />
-                  Simple + affordable
+                  <span class="badge">Best value</span><br />
+                  Ninja AF161 Max XL 5.5 QT
                 </td>
-                <td>Value buyers</td>
-                <td class="muted">Good results for the money, straightforward controls.</td>
-                <td class="muted">Noisy or slower; coatings vary by model.</td>
+                <td>Most kitchens (1–3 people)</td>
+                <td class="muted">Simple daily-driver workflow with strong crisp potential.</td>
+                <td class="muted">Single basket means batches for sides + mains.</td>
+                <td style="white-space:nowrap;">
+                  <a class="btn btn-accent btn-sm" href="https://www.amazon.ca/Ninja-AF161-Fryer-Quart-Grey/dp/B07S6529ZZ?&linkCode=ll2&tag=kitchengearla-20&linkId=14f0831afd6796a4f71c21eecb6d01de&ref_=as_li_ss_tl" rel="sponsored nofollow noopener" target="_blank">Check price</a>
+                </td>
               </tr>
+
               <tr>
                 <td class="best">
-                  <span class="badge">Large</span><br />
-                  Bigger batches
+                  <span class="badge">Dual-zone value</span><br />
+                  Ninja Foodi DualZone XL (DZ401)
                 </td>
-                <td>Families</td>
-                <td class="muted">More usable capacity; fewer rounds.</td>
-                <td class="muted">Bigger footprint; storage reality matters.</td>
+                <td>Busy weeknights</td>
+                <td class="muted">Dual-zone benefits without going full “largest model”.</td>
+                <td class="muted">Still sizable; dual cleanup vs single-basket.</td>
+                <td style="white-space:nowrap;">
+                  <a class="btn btn-accent btn-sm" href="https://www.amazon.ca/Ninja-DZ401-Independent-Dehydrate-Family-Sized/dp/B096X9LGJ1?&linkCode=ll2&tag=kitchengearla-20&linkId=f36fffcd55f391407f136e8b9e0e82c7&ref_=as_li_ss_tl" rel="sponsored nofollow noopener" target="_blank">Check price</a>
+                </td>
               </tr>
+
               <tr>
                 <td class="best">
-                  <span class="badge">Dual-zone</span><br />
-                  Two foods, one run
+                  <span class="badge">Mid-size</span><br />
+                  Ninja AF150 XL 5.5 QT
                 </td>
-                <td>Meal timing</td>
-                <td class="muted">Flexible scheduling; less juggling.</td>
-                <td class="muted">Often heavier; more parts to clean.</td>
+                <td>Everyday crisp jobs</td>
+                <td class="muted">Solid “single basket” option if you prefer simple controls and routine cooking.</td>
+                <td class="muted">Not a dual-zone; batches for multi-item meals.</td>
+                <td style="white-space:nowrap;">
+                  <a class="btn btn-accent btn-sm" href="https://www.amazon.ca/Ninja-AF150AMZ-Reheats-Dehydrates-Capacity/dp/B08QKTXT1N?&linkCode=ll2&tag=kitchengearla-20&linkId=7c3983eca5c231d70df105045768cd4b&ref_=as_li_ss_tl" rel="sponsored nofollow noopener" target="_blank">Check price</a>
+                </td>
+              </tr>
+
+              <tr>
+                <td class="best">
+                  <span class="badge">Compact dual</span><br />
+                  Ninja DoubleStack XL (2-basket)
+                </td>
+                <td>Small counters, dual-zone fans</td>
+                <td class="muted">Dual-basket workflow with a more vertical footprint.</td>
+                <td class="muted">Different layout; cleaning and access can feel different vs side-by-side.</td>
+                <td style="white-space:nowrap;">
+                  <a class="btn btn-accent btn-sm" href="https://www.amazon.ca/Ninja-DoubleStack-2-Basket-Thermometer-Technology/dp/B0F8RGZLQ3?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=ca0663dcf51622984d0154de9ee61ae5&ref_=as_li_ss_tl" rel="sponsored nofollow noopener" target="_blank">Check price</a>
+                </td>
               </tr>
             </tbody>
           </table>
@@ -282,30 +321,29 @@
 
         <div class="pros-cons" aria-label="Quick pros and cons">
           <section class="pros">
-            <h3>What “good” usually looks like</h3>
+            <h3>What “good” looks like</h3>
             <ul>
-              <li>Controls you can use half-asleep.</li>
-              <li>Basket that cleans without a negotiation.</li>
+              <li>Controls you can use without thinking.</li>
+              <li>Basket that cleans without a long soak.</li>
               <li>Consistent results at normal home loads.</li>
               <li>Footprint that matches your counter reality.</li>
             </ul>
           </section>
 
           <section class="cons">
-            <h3>Common disappointments to avoid</h3>
+            <h3>What causes regret</h3>
             <ul>
               <li>Overstated capacity (usable space is smaller).</li>
-              <li>Hot spots or weak airflow at real loads.</li>
-              <li>Coatings that hate metal utensils.</li>
-              <li>Cleaning friction (crevices, awkward inserts).</li>
+              <li>Hot spots when food is crowded.</li>
+              <li>Fussy inserts and crevices that trap residue.</li>
+              <li>Buying dual-zone when you rarely cook two items.</li>
             </ul>
           </section>
         </div>
 
         <div class="two-col">
           <div class="col">
-            <h3>Want a brand-focused path?</h3>
-            <p class="muted">If you’re leaning Ninja, use the hub to understand model families and trade-offs.</p>
+            <h3>Brand hubs & comparisons</h3>
             <ul class="link-list">
               <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Air Fryers Hub</a></li>
               <li><a href="/ninja-vs-philips/">Ninja vs Philips</a></li>
@@ -314,8 +352,7 @@
           </div>
 
           <div class="col">
-            <h3>Not sure what you need yet?</h3>
-            <p class="muted">Start with the fundamentals before shopping.</p>
+            <h3>Start with fundamentals</h3>
             <ul class="link-list">
               <li><a href="/guides/what-is-an-air-fryer/">What is an air fryer?</a></li>
               <li><a href="/guides/how-to-choose-an-air-fryer/">How to choose an air fryer</a></li>
@@ -336,28 +373,27 @@
 
         <div class="stack">
           <p class="muted">
-            Ignore marketing capacity first. Focus on the daily workflow: how you load food, shake/flip, and clean.
+            Ignore marketing capacity first. Focus on daily workflow: how you load food, shake/flip, and clean.
             Most people regret friction, not features.
           </p>
 
           <ul>
             <li><strong>Usable capacity:</strong> what fits in one layer without crowding.</li>
-            <li><strong>Controls:</strong> simple presets are fine, but manual control should be easy.</li>
-            <li><strong>Cleanup:</strong> fewer crevices, easy-to-remove inserts, coating that rinses clean.</li>
-            <li><strong>Results consistency:</strong> stability across real loads (not only “one portion”).</li>
-            <li><strong>Footprint:</strong> measure your counter and storage space, not your optimism.</li>
+            <li><strong>Workflow:</strong> if you often cook two items, dual-zone is a real upgrade.</li>
+            <li><strong>Cleanup:</strong> fewer crevices, easier inserts, coating that rinses clean.</li>
+            <li><strong>Controls:</strong> simple beats “smart” if you value speed and consistency.</li>
+            <li><strong>Footprint:</strong> measure the space you actually have.</li>
           </ul>
 
           <div class="note">
             <p class="small" style="margin:0;">
-              If you want the full deep-dive, use our guide:
-              <a href="/guides/how-to-choose-an-air-fryer/">How to choose an air fryer</a>.
+              Full guide: <a href="/guides/how-to-choose-an-air-fryer/">How to choose an air fryer</a>.
             </p>
           </div>
 
           <div class="note attention">
             <p class="small" style="margin:0;">
-              Informational only. Models and specs change; performance varies by usage, batch size, and food type.
+              Informational only. Models and bundles change; performance varies by food type, batch size, and usage.
             </p>
           </div>
         </div>
@@ -373,14 +409,15 @@
 
         <div class="stack">
           <p class="muted">
-            We don’t crown a universal “best”. We explain what changes the day-to-day experience so you can choose what fits your kitchen.
+            We evaluate air fryers on real kitchen workflow: load, shake/flip, finish, and cleanup.
+            The goal isn’t hype, it’s helping you avoid regret.
           </p>
 
           <ul>
             <li><strong>Usability:</strong> controls, ergonomics, day-to-day friction.</li>
-            <li><strong>Performance:</strong> consistency under normal home use.</li>
+            <li><strong>Performance:</strong> crispness + consistency at normal loads.</li>
             <li><strong>Cleanup:</strong> residue traps, dishwasher practicality.</li>
-            <li><strong>Durability cues:</strong> realistic longevity signals (fit/finish, hinges, coatings).</li>
+            <li><strong>Durability cues:</strong> fit/finish, basket coatings, hinge feel.</li>
             <li><strong>Transparency:</strong> no unverified claims.</li>
           </ul>
 
@@ -389,6 +426,8 @@
               Affiliate disclosure is explicit and separate. See <a href="/disclosure/">Disclosure</a>.
             </p>
           </div>
+
+          <p class="small">Last updated: 2026-02-02</p>
         </div>
       </div>
     </section>
